<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00A7FF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ingelectro.jyj.aportapp.ShowData"
    tools:showIn="@layout/activity_show_data">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base"
        android:textSize="20sp"
        android:textColor="@color/colorShowDataLetter"
        android:id="@+id/base"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/modifyButton"
        android:layout_alignEnd="@+id/modifyButton"
        android:layout_marginTop="71dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salud"
        android:textSize="18sp"
        android:textColor="@color/colorShowDataLetter"
        android:id="@+id/salud"
        android:layout_above="@+id/pension"
        android:layout_toLeftOf="@+id/modifyButton"
        android:layout_toStartOf="@+id/modifyButton"
        android:layout_marginBottom="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pension"
        android:textSize="18sp"
        android:textColor="@color/colorShowDataLetter"
        android:id="@+id/pension"
        android:layout_above="@+id/arl"
        android:layout_alignLeft="@+id/salud"
        android:layout_alignStart="@+id/salud"
        android:layout_marginBottom="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arl"
        android:textSize="18sp"
        android:textColor="@color/colorShowDataLetter"
        android:id="@+id/arl"
        android:layout_above="@+id/total"
        android:layout_alignLeft="@+id/pension"
        android:layout_alignStart="@+id/pension"
        android:layout_marginBottom="74dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="22sp"
        android:textColor="@color/colorShowDataLetter"
        android:textStyle="bold"
        android:id="@+id/total"
        android:layout_above="@+id/modifyButton"
        android:layout_alignLeft="@+id/arl"
        android:layout_alignStart="@+id/arl"
        android:layout_marginBottom="76dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/modifySalary"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:id="@+id/modifyButton"
        android:background="#3FCFF9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_above="@+id/arl"
        android:layout_alignRight="@+id/modifyButton"
        android:layout_alignEnd="@+id/modifyButton" />

</RelativeLayout>
