<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#3FCFF9"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ingelectro.jyj.aportapp.InputData"
    tools:showIn="@layout/activity_input_data">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:gravity="center_horizontal"
        android:text="@string/nameApp"
        android:textStyle="bold"
        android:textSize="44sp"
        android:id="@+id/nameApp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:gravity="center_horizontal"
        android:text="@string/information"
        android:textStyle="italic"
        android:textSize="16sp"
        android:id="@+id/information"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/inputSalary"
            android:hint="@string/inputSalary"
            android:textAlignment="center"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_above="@+id/calculateButton"
            android:layout_centerHorizontal="true"
            android:clickable="false" />

    </android.support.design.widget.TextInputLayout>

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="75dp"
        android:text="@string/calculateButton"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:background="#00A7FF"
        android:textAlignment="center"
        android:textSize="20dp"
        android:id="@+id/calculateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp" />
</RelativeLayout>
